# euled-up

./: .gitignore  README.md
Challenges/: week1.txt  week2.txt
Week_10_Pathfinding/: README.md
Week_10_Pathfinding/asw/rust/: Cargo.toml
Week_10_Pathfinding/asw/rust/src/: main.rs
Week_10_Pathfinding/data/: act1.csv  act2.csv  act2_speeds.csv  act3_bears.csv  act3_elevation.csv  act3_gradient.csv  act3_snow.csv  act3_water.csv
Week_10_Pathfinding/jmp/: build.zig
Week_11_Image_Processing/: README.md
Week_1_Guess_the_number/: README.md
Week_1_Guess_the_number/JP01/: guess_the_number.py
Week_1_Guess_the_number/brd/: Program.cs
Week_1_Guess_the_number/iea/: guess_num.py
Week_1_Guess_the_number/jmp/: README.md  guesser.zig
Week_1_Guess_the_number/mlws/: README.md
Week_1_Guess_the_number/vom/: guess_num_feedback.js
Week_2_Lines_w_Bresenham/: README.md
Week_2_Lines_w_Bresenham/brd/: my_very_cool_image.ppm
Week_2_Lines_w_Bresenham/jmp/: build.zig  termshop.zig
Week_3_Decision_Trees/: README.md
Week_3_Decision_Trees/jmp/: README.md  build.zig
Week_3_Decision_Trees/mlws/: README.md  project.clj
Week_4_String_Processing/: README.md  vom_w4.js
Week_4_String_Processing/brd/: main.c
Week_4_String_Processing/jmp/: build.zig
Week_4_String_Processing/mlws/: README.md
Week_4_String_Processing/vom/: string_processing.js
Week_5_Input_w_Concurrency/: README.md
Week_5_Input_w_Concurrency/mlws/: README.md  (+1 more)
Week_6_Data_Science_w_CSV/: README.md
Week_7_Sudoku_Solver/: README.md
Week_8_Boid_Simulation/: README.md
Week_9_CLI_Game/: README.md
(+143 files in other folders)
