[package]
name = "path_finding"
version = "0.1.0"
authors = ["Ashley Whetter <ashley@awhetter.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
raylib = "3.5.0"
